# ispindel_temp_control

./: .gitignore  CMakeLists.txt  README.md  config_parser.cpp  config_parser.h  main.cpp  parser.cpp  parser.h  plug_adapter.cpp  plug_adapter.h  tcp_connection.cpp  tcp_connection.h
nlohmann/: license
